--- a/index.html
+++ b/index.html
@@ -214,6 +214,15 @@
 									<p>Last Wednesday, I was chosen to volunteer at the inaugral after school activities event whereby grades 4-10 were able to glance at and understand all the after school activities for this academic year. There were many stands and at each stand was an after school activitie. I was responsible for the "College Club", where students are given the oppuritnity understand the different unniversity systems around the world. The club aims to allow each student to choose to university and major that best suits him. I was responsible to persuade students to join this club, showcasing its benefits and how it will help them.</p>
 									<p>After reflecting on this experience, I realized that I had gained and improved many of my persuasive and communication skills. Also, I was able to help the organizer of this event, Mr William, in preparing for the students by making sure each stand is ready to welcome the students. However, there were some limitations to this activity. The activity was sctrictly for students between grade 10-12, so most of the students that came over to my stand werent eligible to participate in the activity.</p>
 								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>University Applications</h3>
+									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
