--- a/index.html
+++ b/index.html
@@ -223,6 +223,42 @@
 									<p></p>
 									<p></p>
 								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Cyprus Trip</h3>
+									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Picking up Litter</h3>
+									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Brother's Wedding</h3>
+									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Reading "Prisoners of Geography"</h3>
+									<h3>Action</h3>
+									<h3>Learning Outcome:</h3>
+									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p></p>
+									<p></p>
+								</section>
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
