--- a/index.html
+++ b/index.html
@@ -220,15 +220,15 @@
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
-									<p></p>
-									<p></p>
+									<p>On November 8 I realized that I had one week to complete my application for the Univeristy of Washington Seattle. After creating a "Coalition" account I was ready to begin my application.  </p>
+									
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Cyprus Trip</h3>
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
-									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p><u>Sunday, December 8, 2019-Friday, December 13, 2019</u></p>
 									<p></p>
 									<p></p>
 								</section>
@@ -237,7 +237,7 @@
 									<h3>Picking up Litter</h3>
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
-									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p><u>Friday, November 1, 2019-Saturday, November 30, 2019</u></p>
 									<p></p>
 									<p></p>
 								</section>
@@ -246,7 +246,7 @@
 									<h3>Brother's Wedding</h3>
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
-									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p><u>Thursday, January 9, 2020</u></p>
 									<p></p>
 									<p></p>
 								</section>
@@ -255,14 +255,11 @@
 									<h3>Reading "Prisoners of Geography"</h3>
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
-									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
+									<p><u>Monday, February 3, 2019-Thursday, February 20, 2019</u></p>
 									<p></p>
 									<p></p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
@@ -270,8 +267,8 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>My CAS Project</h2>
-							<p>Project description</p>
-							
+							<p>During the month of November the amount of Saudi Arabian families in public parks increase exponentially. Hence, the amount of litter in public parks becomes more noticable. As an attempt to reduce this litter and improve the image of our public parks, my friend, Ahmad and I began going to public parks in and around our school's neighborhood. Our campaign lasted throughout the month of November and we would start picking up litter after school. We both would walk around the park with a golve in one hand and a garbage bag in the other. My project is a service as we are, not only providing a service for the families that visit these parks, but we are also providing a service for the plants and animals at the parks. This contributes to the Green Riyadh porject launched by the Manuplicity of Riyadh in 2019.</p>
+							<p>The learning outcomes from the project are the following: L3, L4, L5, L6, L7</p>
 						</div>
 					</section>
 
