--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
-									<p>On November 8 I realized that I had one week to complete my application for the Univeristy of Washington Seattle. After creating a "Coalition" account I was ready to begin my application.  </p>
-									
+									<p>On November 8 I realized that I had one week to complete my application for the Univeristy of Washington Seattle. First of all, i entered through the UW portal to see how to apply. I was redirected to "Coalition", a website used by many students as a gateway to many universities. After I created mycoalition account I began to design my profile. First, I entered my personal information then my familys' and my schools'. After that I have to collect all my report cards from Grade 9 until Grade 12 and inserted all my grades.</p>
+									<p>After finishing my profile, I had to finish the application questions set by UW. The first writing prompt was a personal statement. In that, I talked about the struggles that I have been through and how they have helped shaped my character today. The second prompt dealt with the cultural diversity I might add to the UW campus. There, I was spoke about how, throughout my life, I have been exposed to a unique experience in which I was able to learn from different cultures, especially the Saudi and American cultures.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
