--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
-									<p>On November 8 I realized that I had one week to complete my application for the Univeristy of Washington Seattle. First of all, i entered through the UW portal to see how to apply. I was redirected to "Coalition", a website used by many students as a gateway to many universities. After I created mycoalition account I began to design my profile. First, I entered my personal information then my familys' and my schools'. After that I have to collect all my report cards from Grade 9 until Grade 12 and inserted all my grades.</p>
+									<p>On November 8 I realized that I had one week to complete my application for the Univeristy of Washington Seattle. First of all, i entered through the UW portal to see how to apply. I was redirected to "Coalition", a website used by many students as a gateway to many universities. After I created mycoalition account I began to design my profile. First, I entered my personal information then my family's and my school's. After that I have to collect all my report cards from Grade 9 until Grade 12 and inserted all my grades.</p>
 									<p>After finishing my profile, I had to finish the application questions set by UW. The first writing prompt was a personal statement. In that, I talked about the struggles that I have been through and how they have helped shaped my character today. The second prompt dealt with the cultural diversity I might add to the UW campus. There, I was spoke about how, throughout my life, I have been exposed to a unique experience in which I was able to learn from different cultures, especially the Saudi and American cultures.</p>
 								</section>
 								<section>
@@ -229,8 +229,8 @@
 									<h3>Action</h3>
 									<h3>Learning Outcome:</h3>
 									<p><u>Sunday, December 8, 2019-Friday, December 13, 2019</u></p>
-									<p></p>
-									<p></p>
+									<p>As part of our IB Biology course, we must complete an Internal Assessment (IA) at the end of final academic year. This IA invesitgates one of the many topics that we have taken in class during this course. However, since our school does not have the capabilities to provide us with the best facilities to conduct our investigations, our IB Biology teacher decided to take us on a week-long scientific trip to Kritou Terra, Cyprus. There we explored the nature around us by conducting many experiments.</p>
+									<p>The first experiment we conducted was reagrding the wildlife in a river habitat. We examined the different wildlife in different parts of the river and analysed the reasons for the presence of certain insects in certain parts of the river. In additon to that, we explored the affects of burning a forest on vegetation, the wildlife at different parts of the seashore, and the insects present in a polluted or non-polluted pond. After each experiment, we wrote an report that would later help us in our IAs. In the end,I decided to use the experiment on fire and vegetation as my IA.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
