--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>University Applications</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2</h3>
 									<p><u>Friday, November 8, 2019-Friday, November 15, 2019</u></p>
 									<p>On November 8 I realized that I had one week to complete my application for the Univeristy of Washington Seattle. First of all, i entered through the UW portal to see how to apply. I was redirected to "Coalition", a website used by many students as a gateway to many universities. After I created mycoalition account I began to design my profile. First, I entered my personal information then my family's and my school's. After that I have to collect all my report cards from Grade 9 until Grade 12 and inserted all my grades.</p>
 									<p>After finishing my profile, I had to finish the application questions set by UW. The first writing prompt was a personal statement. In that, I talked about the struggles that I have been through and how they have helped shaped my character today. The second prompt dealt with the cultural diversity I might add to the UW campus. There, I was spoke about how, throughout my life, I have been exposed to a unique experience in which I was able to learn from different cultures, especially the Saudi and American cultures.</p>
@@ -227,7 +227,7 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Cyprus Trip</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 1, 2, 3, 4, 5, 6, 7</h3>
 									<p><u>Sunday, December 8, 2019-Friday, December 13, 2019</u></p>
 									<p>As part of our IB Biology course, we must complete an Internal Assessment (IA) at the end of final academic year. This IA invesitgates one of the many topics that we have taken in class during this course. However, since our school does not have the capabilities to provide us with the best facilities to conduct our investigations, our IB Biology teacher decided to take us on a week-long scientific trip to Kritou Terra, Cyprus. There we explored the nature around us by conducting many experiments.</p>
 									<p>The first experiment we conducted was reagrding the wildlife in a river habitat. We examined the different wildlife in different parts of the river and analysed the reasons for the presence of certain insects in certain parts of the river. In additon to that, we explored the affects of burning a forest on vegetation, the wildlife at different parts of the seashore, and the insects present in a polluted or non-polluted pond. After each experiment, we wrote an report that would later help us in our IAs. In the end,I decided to use the experiment on fire and vegetation as my IA.</p>
@@ -236,28 +236,28 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Picking up Litter</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 3, 4, 5, 6, 7</h3>
 									<p><u>Friday, November 1, 2019-Saturday, November 30, 2019</u></p>
-									<p></p>
-									<p></p>
+									<p>During the month of November the amount of Saudi Arabian families in public parks increases exponentially. Hence, the amount of litter in public places becomes noticable. As an attempt to reduce this litter and improve the image of our public parks, my friend, Ahmad and I began going to public parks in and around our school's neighborhood. Our campaign lasted throughout the month of November and we would start picking up litter after school. We both would around the parks with a glove in one hand and a garbage bag in the other.</p>
+									<p>My project is a service as we are, not only providing a service for the families that visit these parks, but we are also providing a service for the plants and animals at the parks. This contributes to the Green Riyadh porject launched by the Manuplicity of Riyadh in 2019.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Brother's Wedding</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 3, 5</h3>
 									<p><u>Thursday, January 9, 2020</u></p>
-									<p></p>
-									<p></p>
+									<p>Today is my brother's wedding. He is the second of my brothers to get married. Unlike when my other brother was married, this time we had to travel to Dammam, which is where the bride's family resides. We decided to drive from Riyadh to Dammam, which is a 4 hour trip. After arriving in Dammam, we stayed at my aunt's house. After wearing the traditional Saudi dress we left the house headed for the place of the wedding. There we were greeted by the father of the bride.</p>
+									<p>After sitting around for approximately 30-40 minutes, the Sheikh arrived. In Saudi, the Sheikh is the person approved by the government to conduct the wedding rituals and to create the wedding contract. After the Sheikh was finished the party began.</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Reading "Prisoners of Geography"</h3>
 									<h3>Action</h3>
-									<h3>Learning Outcome:</h3>
+									<h3>Learning Outcome: 3, 5, 6</h3>
 									<p><u>Monday, February 3, 2019-Thursday, February 20, 2019</u></p>
-									<p></p>
-									<p></p>
+									<p>Prisoners of Geography was a book gifted to me from my brother back in 2017. At the time I said that I will read the book once I am free. Here I am two years later and I still haven't read the book. Therefore, I decided to read the book. The book discusses how geography has affected history and how it is the main aspect that has controlled the world's borders, economy, and decisions.</p>
+									<p>The author begins by speaking about Russia and how the lack of a warm water port has affected Russia's pursuit of land for years as well as how its geography has allowed Russia to have an easy border with China. Then the book talks about China and its struggle to control the water ways in and out of its country. Then the book talks about USA and how it has become the giant it is today. After that the book continues to talks about Western Europe, Africa, The Middle East, India and Pakistan, Korea and Japan, Latin America and finally, the Artic.</p>
 								</section>
 							</div>
 						</div>
@@ -267,7 +267,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>My CAS Project</h2>
-							<p>During the month of November the amount of Saudi Arabian families in public parks increase exponentially. Hence, the amount of litter in public parks becomes more noticable. As an attempt to reduce this litter and improve the image of our public parks, my friend, Ahmad and I began going to public parks in and around our school's neighborhood. Our campaign lasted throughout the month of November and we would start picking up litter after school. We both would walk around the park with a golve in one hand and a garbage bag in the other. My project is a service as we are, not only providing a service for the families that visit these parks, but we are also providing a service for the plants and animals at the parks. This contributes to the Green Riyadh porject launched by the Manuplicity of Riyadh in 2019.</p>
+							<p>During the month of November the amount of Saudi Arabian families in public parks increase exponentially. Hence, the amount of litter in public parks becomes more noticable. As an attempt to reduce this litter and improve the image of our public parks, my friend, Ahmad and I began going to public parks in and around our school's neighborhood. Our campaign lasted throughout the month of November and we would start picking up litter after school. We both would walk around the park with a glove in one hand and a garbage bag in the other. My project is a service as we are, not only providing a service for the families that visit these parks, but we are also providing a service for the plants and animals at the parks. This contributes to the Green Riyadh porject launched by the Manuplicity of Riyadh in 2019.</p>
 							<p>The learning outcomes from the project are the following: L3, L4, L5, L6, L7</p>
 						</div>
 					</section>
